Attempting to fix bg flicker in Chrome on iOS

--- a/themes/timdunklee/source/assets/scss/_variables.scss
+++ b/themes/timdunklee/source/assets/scss/_variables.scss
@@ -25,7 +25,7 @@ $color-text-secondary: $lightBlue;
 
 //Root Variables
 :root {
-  --hero-bg-img: url('/assets/images/bg-hero-winter.jpg');
+  --hero-bg-img: url(/assets/images/bg-hero-winter.jpg);
   --hero-bg-color: $white;
   --hero-heading-color: $grayDark;
   --heading-color: $grayDark;
@@ -41,7 +41,7 @@ $color-text-secondary: $lightBlue;
 
 //Themes
 :root.theme-summer {
-  --hero-bg-img: url('/assets/images/bg-hero-summer.jpg');
+  --hero-bg-img: url(/assets/images/bg-hero-summer.jpg);
   --hero-bg-color: #3D445D;
   --hero-heading-color: $white;
   --heading-color: #3D445D;
